--- a/mens_project/core/templates/core/about.html
+++ b/mens_project/core/templates/core/about.html
@@ -82,7 +82,9 @@
             <p>
                 A collection inspired by the greatest art movements of all time. Our new designs draw from the intricate details of the Renaissance, the vibrant strokes of Impressionism, and the bold lines of modern art. Explore our range of shirts, trousers, blazers, and t-shirts—each piece a wearable work of art. This isn't just clothing; it's a statement.
             </p>
+            <a href="{% url 'products' %}">
             <button class="shop-button">SHOP NOW</button>
+            </a>
         </div>
     </section>
 
