--- a/mens_project/core/templates/core/carousel.html
+++ b/mens_project/core/templates/core/carousel.html
@@ -9,11 +9,17 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="static/core/images/6870101.jpg" class="d-block w-100" alt="...">
+            <a href="{% url "sherwanicategories" %}">
+            <img src="static/core/images/slides2.jpg" class="d-block w-100" alt="...">
+            </a>
           </div>
-          <div class="carousel-item">
-            <img src="static/core/images/6870101.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-item active">
+            <a href="{% url "sherwanicategories" %}">
+            <img src="static/core/images/slides3.jpg" class="d-block w-100" alt="...">
+            </a>
           </div>
+          
+         
           
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
