--- a/mens_project/core/templates/core/address.html
+++ b/mens_project/core/templates/core/address.html
@@ -20,8 +20,16 @@
 }
 
 .sidebar .nav-link {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    font-size: 14px; /* 👈 Yeh font chhota karega */
+    color: #000;
+    padding: 10px 20px;
+    cursor: pointer;
+
     color: #3b2f2f;
-    font-size: 18px;
     margin-bottom: 15px;
 }
 
@@ -116,13 +124,16 @@
                     <a class="nav-link active" href="{% url 'changepassword' %}">Change Password</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Orders</a>
+                    <a class="nav-link" href="{% url "order" %}">Orders</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'viewcart' %}">Cart</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'address' %}">Address</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logoutpage' %}">Logout</a>
                 </li>
             </ul>
         </nav>
