--- a/mens_project/core/templates/core/changepassword.html
+++ b/mens_project/core/templates/core/changepassword.html
@@ -22,6 +22,14 @@
     }
 
     .sidebar .nav-link {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 600;
+        text-transform: uppercase;
+        letter-spacing: 1.5px;
+        font-size: 14px; /* 👈 Yeh font chhota karega */
+        color: #000;
+        padding: 10px 20px;
+        cursor: pointer;
         color: #000;
         font-weight: 500;
         padding: 12px 15px;
@@ -120,6 +128,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'address' %}">Address</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logoutpage' %}">Logout</a>
                     </li>
                 </ul>
             </div>
