--- a/mens_project/core/templates/core/navbar.html
+++ b/mens_project/core/templates/core/navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <section id="header">
     <nav class="navbar navbar-expand-lg bg-custom fixed-top">
         <div class="container">
@@ -24,7 +25,7 @@
                         <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" 
+                        <a class="nav-link dropdown-toggle" href="{% url 'products' %}" id="navbarDropdownMenuLink" role="button" 
                            data-bs-toggle="dropdown" aria-expanded="false">
                             Mens Categories
                         </a>
@@ -38,9 +39,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'profile' %}">Welcome {{request.user.first_name}}</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-                    </li>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'registration' %}">Registration</a>
@@ -49,9 +47,7 @@
                         <a class="nav-link" href="{% url 'login' %}">Login</a>
                     </li>
                     {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
