--- a/mens_project/core/templates/core/buynow_payment_success.html
+++ b/mens_project/core/templates/core/buynow_payment_success.html
@@ -1,69 +1,82 @@
 {% extends "core/base.html" %}
 
-{% block css %}
-<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
-    <style>
-      body {
-        text-align: center;
-        padding: 40px 0;
-      }
-        h1 {
-          color: #88B04B;
-          font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
-          font-weight: 900;
-          font-size: 40px;
-          margin-bottom: 10px;
-        }
-        p {
-          color: #404F5E;
-          font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
-          font-size:20px;
-          margin: 0;
-        }
-      i {
-        color: #9ABC66;
-        font-size: 100px;
-        line-height: 200px;
-        margin-left:-15px;
-      }
-      .card {
-        background: white;
-        padding: 60px;
-        border-radius: 4px;
-        box-shadow: 0 2px 3px #C8D0D8;
-        display: inline-block;
-
-      }
-
-      .pay{
-        margin-top:30px
-      }
-
-    </style>
-{% endblock css %}
+{% load static %}
 
 {% block content %}
+<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
+<style>
+    body {
+      margin-top: 70px;
+        text-align: center;
+        background: #f8f9fa;
+        font-family: 'Nunito Sans', sans-serif;
+    }
+    .pay {
+        margin-top: 70px;
+    }
+    .payment {
+        font-size: 28px;
+        font-weight: bold;
+        color: #28a745;
+    }
+    .card {
+        background: white;
+        width: 40%;
+        padding: 40px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        display: inline-block;
+        margin-top: 20px;
+    }
+    .gif-container {
+        margin-bottom: 20px;
+    }
+    h1 {
+        color: #28a745;
+        font-size: 24px;
+        font-weight: bold;
+    }
+    p {
+        font-size: 16px;
+        color: #555;
+    }
+    .continue-shopping {
+        margin-top: 10px;
+    }
+    .btn-success {
+        background: #805c3c;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    .btn-success:hover {
+        background:  #a39078;
+    }
+
+   
+
+
+</style>
+
+
 
 <div class="pay">
     <h1 class="payment"> Payment Success </h1>
 </div>
-    
-    <div class="card">
-      <div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
-        <i class="checkmark">✓</i>
-      </div>
-        <h1>Success</h1> 
-        <p>We received your Order.<br/> Thank you for purchasing!</p>
+<div class="card">
+    <div class="gif-container">
+        <img src="{% static 'core/images/success2.gif' %}" alt="Payment Success GIF" width="200">
     </div>
-    <br>
-    <br>
-    <br>
+    <h1>Success</h1>
+    <p>We received your order Thank you for purchasing!</p>
 
-      <a href="{% url "home" %}">
-                    <div class="car">
-                        <div >
-                            <button type="button" class="btn btn-success btn-lg w-50" >Continue Shopping</button>
-                        </div>
-                    </div>
-                </a>
+   <div class="continue-shopping">
+       <a href="{% url 'home' %}">
+           <button type="button" class="btn btn-success">Continue Shopping</button>
+       </a>
+   </div>
+</div>
 {% endblock content %}
