--- a/mens_project/core/templates/core/logoutpage.html
+++ b/mens_project/core/templates/core/logoutpage.html
@@ -27,7 +27,7 @@
         font-weight: 600;
         text-transform: uppercase;
         letter-spacing: 1.5px;
-        font-size: 14px; /* 👈 Yeh font chhota karega */
+        font-size: 14px; 
         color: #000;
         padding: 10px 20px;
         cursor: pointer;
