--- a/mens_project/core/templates/core/payment_success.html
+++ b/mens_project/core/templates/core/payment_success.html
@@ -21,6 +21,7 @@
     }
     .card {
         background: white;
+        width: 40%;
         padding: 40px;
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -40,10 +41,10 @@
         color: #555;
     }
     .continue-shopping {
-        margin-top: 20px;
+        margin-top: 10px;
     }
     .btn-success {
-        background: #28a745;
+        background: #805c3c;
         color: white;
         padding: 10px 20px;
         border: none;
@@ -52,8 +53,12 @@
         cursor: pointer;
     }
     .btn-success:hover {
-        background: #218838;
+        background:  #a39078;
     }
+
+   
+
+
 </style>
 
 
@@ -66,11 +71,12 @@
         <img src="{% static 'core/images/success2.gif' %}" alt="Payment Success GIF" width="200">
     </div>
     <h1>Success</h1>
-    <p>We received your order.<br/> Thank you for purchasing!</p>
-</div>
-<div class="continue-shopping">
-    <a href="{% url 'home' %}">
-        <button type="button" class="btn btn-success">Continue Shopping</button>
-    </a>
+    <p>We received your order Thank you for purchasing!</p>
+
+   <div class="continue-shopping">
+       <a href="{% url 'home' %}">
+           <button type="button" class="btn btn-success">Continue Shopping</button>
+       </a>
+   </div>
 </div>
 {% endblock content %}
